Barra do perfil

--- a/css/index.css
+++ b/css/index.css
@@ -65,6 +65,10 @@ section {
   font-size: 1.3rem;
 }
 
+.icons {
+  display: flex;
+}
+
 .icons i {
   color: var(--preto);
   font-size: 1.7rem;
@@ -75,6 +79,10 @@ section {
 .icons i:hover {
   color: var(--vermelho);
   font-size: 1.9rem;
+}
+
+.icons .perfil button {
+  background: var(--branco);
 }
 
 
