--- a/css/index_consultor.css
+++ b/css/index_consultor.css
@@ -145,9 +145,9 @@ section {
 /*PONTOS*/
 .recompensas {
   padding: 2rem;
-  color: var(--branco);
+  color: var(--fundo);
   text-align: center;
-  background: linear-gradient(135deg, #d60000, #bb0000);
+  background: var(--branco);
   width: 100%;
 }
 
@@ -156,7 +156,8 @@ section {
 }
 
 .pontos {
-  background: rgb(255, 255, 255);
+  background: var(--branco);
+  border: 4px solid var(--fundo);
   color: var(--fonte);
   padding: 1.5rem;
   border-radius: 12px;
@@ -193,6 +194,7 @@ section {
   min-height: 30vh;
   min-height: 17vh;
   text-align: center;
+  border: 2px solid var(--fundo);
 }
 
 .premio h4 {
@@ -253,7 +255,7 @@ section {
 }
 
 .card_front {
-  background: url(../images/estrela_missao.png) center/cover no-repeat; /*parte da frente do card*/
+  background: url(../images/estrela_missao_vinho.jpg) center/cover no-repeat; /*parte da frente do card*/
   color: var(--preto);
   text-align: center;
   justify-content: center;
@@ -272,4 +274,5 @@ section {
   font-size: 1rem;
   transform: rotateY(180deg); /*rotaciona o verso junto*/
   border-radius: 200px;
+  border: 2px solid var(--fundo);
 }
